Add _redirects file and update baseHref in angular.json for root path

--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,7 @@
                 }
               ],
               "outputHashing": "all",
-              "baseHref": "/portfolio/"
+              "baseHref": "/"
             },
             "development": {
               "optimization": false,
